# Multi-authentication-system

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_add_device_fingerprint.sql  0003_webauthn_passkeys.sql  0004_identity_and_session_hardening.sql  0005_person_subject_uniqueness.sql
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts  webauthn.ts
